--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,7 @@
           <div class="figure-svg">
             <img src="images/hero/figure-svg.svg" alt="figure-svg" />
           </div>
-          <img src="https://sevocrear.github.io/images/hero/hero.png" alt="hero-image" style='
+          <img src="https://sevocrear.github.io/images/hero/hero.jpg" alt="hero-image" style='
                   -webkit-mask: url(https://sevocrear.github.io/images/hero/hero-mask-svg.png);
                   -webkit-mask-repeat: no-repeat;
                   -webkit-mask-size: contain;
@@ -180,7 +180,7 @@
                 <div class="about_header mb-5">
                     <span class="top-title">About</span>
                     <h2 id="about-me">About me</h2>
-<p>Enjoy team diversity and increase their networks among others people in various fields by provided.
+<p>I am studying for a master’s degree in Innopolis University, Russia. The main major of mine is in Robotics and Mechatronics.
                 </div>
             </div>
         </div>
@@ -214,13 +214,14 @@
                             </svg>
                         </div>
                         <div class="mb-4 text-light">
-                            <h3 id="i-design-and-build-ultimate-things">I design and build ultimate things.</h3>
-<p>I love to work in User Experience &amp; User Interface designing. Because I love to solve the design problem and find easy and better solutions to solve it. I always try my best to make good user interface with the best user experience. I have been working as a Visual designer from.
+                            <h3 id="i-program-and-design-robotics-systems">I program and design robotics systems.</h3>
+<p>I love to work in Robotics &amp; Mechatronics sphere. Since childhood I have loved to assemble schemes and program them to do the staff I want. I always try to do my best to find most fitable and easy-to-implement solution.
+But robotics is not only one sphere I work in. Also, I program telegram bots, do some universities and olympiad tasks, e.t.c.
                         </div>
                         <div>
                             <a class="btn btn-primary mr-3 btn-zoom"
                                 href="https://sevocrear.github.io/contact">Hire me</a>
-                            <a class="btn btn-outline-primary btn-zoom" href="https://sevocrear.github.io/contact">
+                            <a class="btn btn-outline-primary btn-zoom" href="https://drive.google.com/uc?export=download&amp;id=1sLI1PcuXUykGJruWCsF0lInMuZuAmRVe">
                                 Download CV </a>
                         </div>
                     </div>
@@ -918,7 +919,7 @@
 						<li class="mb-2"><a class="text-light" href="mailto:sevocrear@gmail.com"><span class="fa-li"><i
 										class="fa fa-envelope"></i></span>sevocrear@gmail.com</a></li>
 						<li class="mb-2">
-							<span class="fa-li"><i class="fa fa-map-marker"></i></span>425500 Innopolis, Russia.</a>
+							<span class="fa-li"><i class="fa fa-map-marker"></i></span>420500 Innopolis, Russia.</a>
 						</li>
 					</ul>
 				</div>
