--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,13 @@
   <link rel="icon" href="https://sevocrear.github.io/images/favicon.png" type="image/x-icon" />
   
   <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR%20GOOGLE%20ANALYTICS%20CODE"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-RZPCD5E5NB"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'YOUR GOOGLE ANALYTICS CODE');
+    gtag('config', 'G-RZPCD5E5NB');
   </script>
   
 </head>
