--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -211,7 +211,7 @@
           <h3>Contact Form</h3>
         </div>
         <div class="contact-form-input">
-          <form id="contact-form" action="YOUR%20FORMSPREE%20URL" method="POST">
+          <form id="contact-form" action="https://formspree.io/f/mzbkkzbe" method="POST">
 
             <div class="form-row">
 
