--- a/public/index.html
+++ b/public/index.html
@@ -208,7 +208,7 @@ But robotics is not only one sphere I work in. Also, I program telegram bots, do
                         <div>
                             <a class="btn btn-primary mr-3 btn-zoom"
                                 href="https://sevocrear.github.io/contact">Hire me</a>
-                            <a class="btn btn-outline-primary btn-zoom" href="https://drive.google.com/uc?export=download&amp;id=1sLI1PcuXUykGJruWCsF0lInMuZuAmRVe">
+                            <a class="btn btn-outline-primary btn-zoom" href="https://sevocrear.github.io/files/CV/main.pdf">
                                 Download CV </a>
                         </div>
                     </div>
