--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -211,7 +211,7 @@
           <h3>Contact Form</h3>
         </div>
         <div class="contact-form-input">
-          <form id="contact-form" action="https://formspree.io/f/mzbkkzbe" method="POST" enctype="multipart/form-data">
+          <form id="contact-form" action="https://formspree.io/f/mzbkkzbe" accept-charset="utf-8" method="POST" enctype="multipart/form-data">
 
             <div class="form-row">
 
@@ -226,9 +226,11 @@
             <div class="form-group">
               <textarea class="form-control" id="message" rows="6" name="message" placeholder="Message"></textarea>
             </div>
-
-            <label for="upload"> Your file:</label>
-            <input type="file" name="upload">
+            
+            <div class="form-group">
+              <label for="upload"> Your file:</label>
+              <input type="file" name="upload">
+            </div>
 
             <div class="form-group">
               <div class="form-check small">
@@ -242,10 +244,6 @@
             <button type="submit" class="btn btn-primary btn-zoom" id="contact-form-button">Send Message</button>
             <p id="contact-form-status" class="mt-3"></p>
           </form>
-
-          
-
-
 
         </div>
       </div>
