--- a/public/index.html
+++ b/public/index.html
@@ -368,11 +368,11 @@ But robotics is not only one sphere I work in. Also, I program telegram bots, do
         <div class="portfolio-item-grid">
           
           <div class="portfolio-item">
-            <img src="images/portfolio/portfolio-1.png" class="portfolio-item-thumb" alt="portfolio-thumb" />
+            <img src="images/portfolio/bot_MOEX.png" class="portfolio-item-thumb" alt="portfolio-thumb" />
             <div class="portfolio-item-content">
-              <span>Development, UX Design</span>
+              <span>Telegram Bot</span>
               <h3 class="mb-0">
-                <a class="text-dark" href="https://sevocrear.github.io/portfolio/case-study-one/">Case Study One</a>
+                <a class="text-dark" href="https://sevocrear.github.io/portfolio/case-study-one/">MOEX Telegram Bot</a>
               </h3>
               <a class="see-more-btn" href="https://sevocrear.github.io/portfolio/case-study-one/">See details</a>
             </div>
