fixed some issues

--- a/public/en/index.html
+++ b/public/en/index.html
@@ -144,7 +144,7 @@
           <div class="figure-svg">
             <img src="images/hero/figure-svg.svg" alt="figure-svg" />
           </div>
-          <img src="https://sevocrear.github.io/en/images/hero/hero.jpg" alt="hero-image" style='
+          <img src="https://sevocrear.github.io/images/hero/hero.jpg" alt="hero-image" style='
                   -webkit-mask: url(https://sevocrear.github.io/images/hero/hero-mask-svg.png);
                   -webkit-mask-repeat: no-repeat;
                   -webkit-mask-size: contain;
@@ -181,7 +181,7 @@
                             <img src="images/hero/figure-svg.svg" alt="figure-svg">
                         </div>
                         <div class="about_content-thumb-image">
-                            <img src="https://sevocrear.github.io/en/images/about/about-img.png" alt="about-img"
+                            <img src="https://sevocrear.github.io/images/about/about-img.png" alt="about-img"
                                 style='-webkit-mask: url(https://sevocrear.github.io/images/about/about-mask-svg.svg); -webkit-mask-size: contain;'>
                         </div>
                     </div>
@@ -517,7 +517,7 @@ But robotics is not only one sphere I work in. Also, I program telegram bots, do
                         <img src="images/hero/figure-svg.svg" alt="figure-svg">
                     </div>
                     <div class="skill__thumb_image">
-                        <img src="https://sevocrear.github.io/en/images/skill/skill_image.png" alt="skill-img" style='
+                        <img src="https://sevocrear.github.io/images/skill/skill_image.png" alt="skill-img" style='
                                         -webkit-mask: url(https://sevocrear.github.io/images/skill/skill-mask-svg.svg);
                                         -webkit-mask-repeat: no-repeat;
                                         -webkit-mask-size: contain;
@@ -955,7 +955,7 @@ But robotics is not only one sphere I work in. Also, I program telegram bots, do
 						<li class="mb-2"><a class="text-light" href="mailto:sevocrear@gmail.com"><span class="fa-li"><i
 										class="fa fa-envelope"></i></span>sevocrear@gmail.com</a></li>
 						<li class="mb-2">
-							<span class="fa-li"><i class="fa fa-map-marker"></i></span>420500 Innopolis, Russia.</a>
+							<span class="fa-li"><i class="fa fa-map-marker"></i></span>420500 Innopolis, Russia</a>
 						</li>
 					</ul>
 				</div>
