--- a/public/ru/index.html
+++ b/public/ru/index.html
@@ -152,7 +152,7 @@
           </div>
           <div class="mb-5">
             <span class="top-title pre-line">Привет, меня зовут Илья Севостьянов</span>
-            <h1 id="я-здесь-чтобы-помочь-тебе-с-робототехникой-и-it">Я здесь, чтобы помочь тебе с Робототехникой и IT</h1>
+            <h1 id="я-здесь-чтобы-помочь-вам-с-робототехникой-и-it">Я здесь, чтобы помочь Вам с Робототехникой и IT</h1>
 <p>Доверьте свой проект или задачу специалисту, который сделает это на высшем уровне и в срок.
           </div>
           <a type="button" class="btn btn-lg btn-primary btn-zoom"
@@ -551,7 +551,7 @@
                 <div class="skill__progress">
                     <div class="skill__progress_heading mb-5">
                         <span class="top-title pre-line">Мои Навыки</span>
-                        <h2 id="зачем-нанимать-именно-меня-для-вашего-проекта">Зачем нанимать именно меня для Вашего проекта?</h2>
+                        <h2 id="почему-именно-я">Почему Именно Я?</h2>
 <p>Моя цель - построить профессиональный и качественный продукт. Ниже вы можете увидеть основной список моих навыков
                     </div>
                     
