added language functionality

--- a/public/ru/index.html
+++ b/public/ru/index.html
@@ -889,7 +889,7 @@
 						<img src="https://sevocrear.github.io/images/allpost/allPost-6.jpg" alt="post-image">
 					</div>
 					<div class="blog-preview__item-content bg-white">
-						<span class="small">September 13, 2020</span>
+						<span class="small">2020-09-13</span>
 						<h5 class="mb-0">
 							<a class="text-dark" href="https://sevocrear.github.io/ru/blog/markdown-formatting-demo/">Форматирование Markdown</a>
 						</h5>
