--- a/public/en/portfolio/telegram_bot_moex/index.html
+++ b/public/en/portfolio/telegram_bot_moex/index.html
@@ -185,7 +185,7 @@
         <div class="case-details-thumb mb-5">
           <img src="https://sevocrear.github.io/images/portfolio/MOEX_bot.png" alt="case-details" />
         </div>
-        <p>I decided to use *.npy file in order to store users IDs and max value of the stock they&rsquo;d like to see in the chat. So, the idea was to constrain the price of the stocks for certain users.</p>
+        <p>I decided to use *.npy file in order to store users IDs and max value of the stock they&rsquo;d like to see in the chat. So, the idea was to constrain the price of the stocks for certain users. After that, MySQL could be implemented.</p>
 <p><img src="/images/portfolio/bot_MOEX.png" alt="Bot"></p>
 <p>The example result of the bot output you can see above.</p>
 <p>Also, it should be mentioned that the bot could be deployed on the server in order to be fully automated.</p>
