--- a/public/ru/portfolio/telegram_bot_moex/index.html
+++ b/public/ru/portfolio/telegram_bot_moex/index.html
@@ -183,7 +183,7 @@
         <div class="case-details-thumb mb-5">
           <img src="https://sevocrear.github.io/images/portfolio/MOEX_bot.png" alt="case-details" />
         </div>
-        <p>Для хранения пользовательских данных (ID) я решил использовать файл * .npy. Также туда заносится индивидуальная максимальная стоимость акций, которые пользователи хотели бы видеть в чате с ботом. Таким образом, идея заключалась в том, чтобы ограничить цену акций для определенных пользователей.</p>
+        <p>Для хранения пользовательских данных (ID) я решил использовать файл * .npy (В дальнейшем стоит использовать MySQL). Также туда заносится индивидуальная максимальная стоимость акций, которые пользователи хотели бы видеть в чате с ботом. Таким образом, идея заключалась в том, чтобы ограничить цену акций для определенных пользователей.</p>
 <p><img src="/images/portfolio/bot_MOEX.png" alt="Bot"></p>
 <p>Пример результата вывода бота вы можете увидеть выше.</p>
 <p>Также следует отметить, что бот может быть развернут на сервере для полной автоматизации.</p>
