--- a/public/en/index.html
+++ b/public/en/index.html
@@ -458,7 +458,11 @@ But robotics is not only one sphere I work in. Also, I program telegram bots, do
                         <div class="resume__education_item">
                             <span class="pre-line text-primary"> 2019-2021 </span>
                             <h4 id="master-in-computer-science">Master in Computer Science</h4>
-<p>Graduating Innopolis University. Thesis project is dedicated to the dynamic walking of quadruped robot
+<p>Graduating Innopolis University. Thesis project is dedicated to the dynamic walking of quadruped robot</p>
+<h6 id="achievements">Achievements:</h6>
+<ul>
+<li><a href="../../../en/files/inno_diploma_excellent_academic.jpg">Diploma for excellent academic achievements in Autumn and Spring Semesters in 2020 year</a></li>
+</ul>
                         </div>
                         
 
