--- a/public/ru/index.html
+++ b/public/ru/index.html
@@ -457,7 +457,11 @@
                         <div class="resume__education_item">
                             <span class="pre-line text-primary"> 2019-2021 </span>
                             <h4 id="магистр-компьютерных-наук">Магистр Компьютерных Наук</h4>
-<p>Оканчиваю в 2021 г. Университет Иннополис. Дипломная работа посвящена динамической ходьбе четвероногого робота.
+<p>Оканчиваю в 2021 г. Университет Иннополис. Дипломная работа посвящена динамической ходьбе четвероногого робота.</p>
+<h6 id="достижение">Достижение:</h6>
+<ul>
+<li><a href="../../../ru/files/inno_diploma_excellent_academic.jpg">Диплом за отличную успеваемость в осеннем и весеннем семестрах 2020 года</a></li>
+</ul>
                         </div>
                         
 
