--- a/public/ru/index.html
+++ b/public/ru/index.html
@@ -233,7 +233,7 @@
                         <div>
                             <a class="btn btn-primary mr-3 btn-zoom"
                                 href="https://sevocrear.github.io/ru/contact">Нанять меня</a>
-                            <a class="btn btn-outline-primary btn-zoom" href="https://sevocrear.github.io/ru/files/CV/main.pdf">
+                            <a class="btn btn-outline-primary btn-zoom" href="https://sevocrear.github.io/ru/files/CV/Russian_CV.pdf">
                                 Загрузить CV </a>
                         </div>
                     </div>
