--- a/public/en/index.html
+++ b/public/en/index.html
@@ -235,7 +235,7 @@
                         <div>
                             <a class="btn btn-primary mr-3 btn-zoom"
                                 href="https://sevocrear.github.io/en/contact">Hire me</a>
-                            <a class="btn btn-outline-primary btn-zoom" href="https://sevocrear.github.io/en/files/CV/main.pdf">
+                            <a class="btn btn-outline-primary btn-zoom" href="https://sevocrear.github.io/en/files/CV/English_CV.pdf">
                                 Download CV </a>
                         </div>
                     </div>
