added sertificates links

--- a/public/en/index.html
+++ b/public/en/index.html
@@ -513,6 +513,7 @@
 <ul>
 <li>Developed UAV visual positioning system for high-precision autonomous landing</li>
 <li>Contributed to UAV landing zone detection system for the task of safe autonomous landing</li>
+<li>Developed LDWS for the bus. I was responsible for processing the output of the neural network, deployment and the proper operation of the camera.</li>
 </ul>
 <h6 id="achievements">Achievements:</h6>
 <ul>
