--- a/public/ru/index.html
+++ b/public/ru/index.html
@@ -510,6 +510,7 @@ OpenCV, Pytorch, CUDA, ONNX, TensorRT, подбор сенсоров и пр.
 <ul>
 <li>Разработал LED систему компьютерного зрения для определения положения и ориентации посадочной площадки БПЛА &ldquo;день-ночь&rdquo;</li>
 <li>Сделал вклад в систему определения зоны приземления БПЛА для задачи безопасной автономной посадки</li>
+<li>Разработал систему помощи водители при съезде с полосы для автобуса. Был ответственен за обработку выхода нейронной сети, ее деплой и функционирование камеры.</li>
 </ul>
 <h6 id="достижение">Достижение:</h6>
 <ul>
