added new certificate

--- a/public/ru/index.html
+++ b/public/ru/index.html
@@ -435,6 +435,16 @@ OpenCV, Pytorch, CUDA, ONNX, TensorRT, подбор сенсоров и пр.
                         
                         <div class="resume__education_item">
                             <span class="pre-line text-primary"> янв, 2022 </span>
+                            <h4 id="последовательные-модели">Последовательные Модели</h4>
+<p>Закончил 5ый курс в специализации &ldquo;Глубокое обучение&rdquo; от DeepLearning.AI.</p>
+<ul>
+<li><a href="https://www.coursera.org/account/accomplishments/certificate/KMPNDEUWEPZM">Сертификат</a></li>
+</ul>
+
+                        </div>
+                        
+                        <div class="resume__education_item">
+                            <span class="pre-line text-primary"> янв, 2022 </span>
                             <h4 id="сверточные-нейронные-сети">Сверточные Нейронные Сети</h4>
 <p>Закончил 4ый курс в специализации &ldquo;Глубокое обучение&rdquo; от DeepLearning.AI.</p>
 <ul>
