--- a/public/en/index.html
+++ b/public/en/index.html
@@ -438,6 +438,16 @@
                         
                         <div class="resume__education_item">
                             <span class="pre-line text-primary"> jan, 2022 </span>
+                            <h4 id="sequence-models">Sequence Models</h4>
+<p>Completed 5th course in Deep Learning specialization from DeepLearning.AI.</p>
+<ul>
+<li><a href="https://www.coursera.org/account/accomplishments/certificate/KMPNDEUWEPZM">Certificate</a></li>
+</ul>
+
+                        </div>
+                        
+                        <div class="resume__education_item">
+                            <span class="pre-line text-primary"> jan, 2022 </span>
                             <h4 id="convolutional-neural-networks">Convolutional Neural Networks</h4>
 <p>Completed 4th course in Deep Learning specialization from DeepLearning.AI.</p>
 <ul>
