--- a/public/en/portfolio/telegram_bot_moex/index.html
+++ b/public/en/portfolio/telegram_bot_moex/index.html
@@ -25,16 +25,6 @@
   <link rel="shortcut icon" href="https://sevocrear.github.io/images/favicon.ico" type="image/x-icon" />
   <link rel="icon" href="https://sevocrear.github.io/images/favicon.png" type="image/x-icon" />
   
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-RZPCD5E5NB"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-RZPCD5E5NB');
-  </script>
-  
 </head>
 
 <body>
@@ -266,7 +256,7 @@
 					</div>
 					<div class="text-light footer__cta_content">
 						<span>Contact me</span>
-						<h2 class="mb-0">Let’s Start a Project</h2>
+						<h2 class="mb-0">Let's Сooperate</h2>
 					</div>
 					<div class="footer__cta_action">
 						<a class="btn btn-light btn-zoom" href="https://sevocrear.github.io/en/contact">Get in
@@ -303,6 +293,8 @@
 										class="fa fa-phone"></i></span></a></li>
 						<li class="mb-2"><a class="text-light" href="mailto:sevocrear@gmail.com"><span class="fa-li"><i
 										class="fa fa-envelope"></i></span>sevocrear@gmail.com</a></li>
+						<li class="mb-2"><a class="text-light" href="tg://resolve?domain=sevocrear"><span class="fa-li"><i
+							class="fa fa-telegram"></i></span>sevocrear</a></li>
 						<li class="mb-2">
 							<span class="fa-li"><i class="fa fa-map-marker"></i></span>420500 Innopolis, Russia</a>
 						</li>
@@ -313,7 +305,7 @@
 		<div class="row footer__footer">
 			<div class="col-lg-6">
 				<div class="footer__footer_copy text-light">
-					<p>All right reserved copyright © Portio 2020</p>
+					<p>All right reserved copyright © Portio 2022</p>
 				</div>
 			</div>
 			<div class="col-lg-6">
@@ -339,7 +331,7 @@
 		</div>
 	</div>
 </section>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVD82A8IiQA-F2AeMAacdMtYO_Con5Hy0&libraries=geometry"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=&libraries=geometry"></script>
 <script src="https://sevocrear.github.io/plugins/jQuery/jquery.min.js"></script>
 <script src="https://sevocrear.github.io/plugins/bootstrap/bootstrap.min.js"></script>
 <script src="https://sevocrear.github.io/plugins/slick/slick.min.js"></script>
