some minor updates

--- a/public/en/index.html
+++ b/public/en/index.html
@@ -217,8 +217,8 @@
                         <div class="mb-4 text-light">
                             <h3 id="i-program-and-design-computer-vision-systems">I program and design computer vision systems.</h3>
 <p>I received a bachelor&rsquo;s degree in mechatronics and robotics at Bauman Moscow State Technical University, after which I graduated a master&rsquo;s degree from Innopolis University, specializing in &ldquo;Robotics and Computer Vision&rdquo;.</p>
-<p>I have participated in many projects related both to robotic systems control and computer vision: UAV lane tracking, UAV landing platform detection, barista manipulator, ping-pong manipulator, car wash automation, four-legged robot, ADAS, autonomous truck, railways safe zone exit alarm system and so on.
-At the moment I am working in the Autonomous Technologies Laboratory of Innopolis University as a computer vision specialist.</p>
+<p>I have participated in many projects related both to robotic systems control and computer vision: UAV lane tracking, UAV landing platform detection, barista manipulator, ping-pong manipulator, car wash automation, four-legged robot, ADAS, autonomous truck, railways safe zone exit alarm system and so on.</p>
+<p>At the moment I am working in the Autonomous Technologies Laboratory of Innopolis University as a computer vision specialist.</p>
 
                         </div>
                         <div>
